--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "axios": "^1.7.2",
-    "react": "^18.2.0",
+    "chart.js": "^4.4.3",
+    "date-fns": "^3.6.0",
+    "json-server": "^1.0.0-beta.1",
+    "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
