--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
-    "json-server": "^1.0.0-beta.1",
+    "json-server": "^0.17.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0"
